--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
+name = "kmain"
+path = "src/kmain.rs"
 crate-type = ["staticlib"]
 
 [dependencies]
